[FIX] mail: properly align badges & actions in discuss sidebar
closes odoo/odoo#203129

X-original-commit: d18573fdde8a1c34f5d4af495ab0a8a501d243cf

--- a/addons/mail/static/src/discuss/core/public_web/discuss_sidebar_categories.scss
+++ b/addons/mail/static/src/discuss/core/public_web/discuss_sidebar_categories.scss
@@ -37,7 +37,7 @@ $o-mail-DiscussSidebarChannel-borderOpacity: .05;
 }
 
 .o-mail-DiscussSidebarCategory-chevronCompact {
-    left: map-get($spacers, 1);
+    left: - map-get($spacers, 1)/2;
 }
 
 .o-mail-DiscussSidebarCategory-toggler {
